--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -255,9 +255,9 @@
                     <span asp-validation-for="GitHub" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Dribble" class="control-label"></label>
-                    <input asp-for="Dribble" class="form-control" />
-                    <span asp-validation-for="Dribble" class="text-danger"></span>
+                    <label asp-for="Dribbble" class="control-label"></label>
+                    <input asp-for="Dribbble" class="form-control" />
+                    <span asp-validation-for="Dribbble" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Behance" class="control-label"></label>
