--- a/HrPortalV2.Web/Views/Jobs/Apply.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Apply.cshtml
@@ -7,7 +7,8 @@
 
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Apply" asp-route-jobid="@Model.JobId">
+        <form asp-action="Apply">
+            <input asp-for="JobId" type="hidden" />
             <div class="form-group">
                 <label asp-for="ResumeId" class="control-label"></label>
                 <select asp-for="ResumeId" class="form-control" asp-items="ViewBag.MyResumes">
