--- a/HrPortalV2.Web/Views/Messages/Details.cshtml
+++ b/HrPortalV2.Web/Views/Messages/Details.cshtml
@@ -22,11 +22,24 @@
         <fieldset>
             <legend>Yanıtla:</legend>
 
-            <form>
-                <textarea name="Description" class="form-control" rows="8"></textarea><br />
-                <button type="submit" class="btn btn-success btn-sm">Gönder</button>
-                <a href="javascript:void(0);" onclick="history.back();"  class="btn btn-danger btn-sm">İptal</a>
-            </form>
+            <form action="@(User.IsInRole("Candidate")?Url.Action("SendMessageToCompany"):Url.Action("SendMessageToResume"))" method="post">
+                <input type="hidden" name="To" value="@Model.From" />
+                <input type="hidden" name="From" value="@Model.To" />
+                <div class="form-group">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" class="form-control" readonly />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <textarea name="Description" class="form-control" rows="8"></textarea>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success btn-sm">Gönder</button>
+                    <a href="javascript:void(0);" onclick="history.back();" class="btn btn-danger btn-sm">İptal</a>
+                </div>
+</form>
         </fieldset>
     </div>
 </div>
