--- a/HrPortalV2.Web/Views/JobApplications/MyJobApplicants.cshtml
+++ b/HrPortalV2.Web/Views/JobApplications/MyJobApplicants.cshtml
@@ -23,7 +23,6 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
 
-            <th>Eylemler</th>
         </tr>
     </thead>
     <tbody>
@@ -31,22 +30,20 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Resume.Id)
+                    <a asp-action="Details" asp-controller="Resumes" asp-route-id="@item.ResumeId">
+                        @Html.DisplayFor(modelItem => item.Resume.ResumeName)
+                    </a>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Job.Id)
+                    <a asp-action="Details" asp-controller="Jobs" asp-route-id="@item.JobId">
+                        @Html.DisplayFor(modelItem => item.Job.Title)
+                        </a>
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
-                </td>
-
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
