cookie consent update

--- a/HrPortalV2.Web/Views/Home/Index.cshtml
+++ b/HrPortalV2.Web/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Anasayfa";
 }
 
 <link href="/assets/pages/css/search.min.css" rel="stylesheet" type="text/css" />
