--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,12 +1,13 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "E-Posta Onayla";
 }
 
 <h2>@ViewData["Title"]</h2>
 <div>
     <p>
-        Thank you for confirming your email.
+
+        E-postanızı onayladığınız için teşekkür ederiz.
     </p>
 </div>
