--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,17 +1,16 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Üye Ol";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Associate your @Model.LoginProvider account.</h4>
+<h4>İlişkilendirin @Model.LoginProvider hesabınızı.</h4>
 <hr />
 
 <p class="text-info">
-    You've successfully authenticated with <strong>@Model.LoginProvider</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    Başarılı bir şekilde doğruladınız<strong>@Model.LoginProvider</strong>
+    Lütfen bu site için bir e-posta adresi girin ve giriş işlemini tamamlamak için Kayıt düğmesine tıklayın.
 </p>
 
 <div class="row">
