--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Şifre onayını unuttum";
 }
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Please check your email to reset your password.
+    Şifrenizi sıfırlamak için lütfen e-postanızı kontrol edin.
 </p>
 
