--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ChangePasswordModel
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = "Şifre değiştir";
 }
 
 <h4>@ViewData["Title"]</h4>
@@ -25,7 +25,9 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Update password</button>
+            <button type="submit" class="btn btn-default">
+                Şifreyi güncelle
+            </button>
         </form>
     </div>
 </div>
