--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Disable2faModel
 @{
-    ViewData["Title"] = "Disable two-factor authentication (2FA)";
+    ViewData["Title"] = "İki faktörlü kimlik doğrulamayı devre dışı bırak (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -11,16 +11,19 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>This action only disables 2FA.</strong>
+        <strong>Bu işlem sadece 2FA'yı devre dışı bırakır.</strong>
     </p>
     <p>
-        Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a asp-page="./ResetAuthenticator">reset your authenticator keys.</a>
+
+        2FA'nın devre dışı bırakılması, kimlik doğrulama uygulamalarında kullanılan tuşları değiştirmez.
+        Bir doğrulayıcı uygulamasında kullanılan anahtarı değiştirmek isterseniz<a asp-page="./ResetAuthenticator">kimlik doğrulama anahtarlarınızı sıfırlayın.</a>
     </p>
 </div>
 
 <div>
     <form method="post" class="form-group">
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
+        <button class="btn btn-danger" type="submit">
+            2FA'yı devre dışı bırak
+        </button>
     </form>
 </div>
