--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DownloadPersonalDataModel
 @{
-    ViewData["Title"] = "Download Your Data";
+    ViewData["Title"] = "Verilerinizi indirin";
     ViewData["ActivePage"] = ManageNavPages.DownloadPersonalData;
 }
 
