--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model GenerateRecoveryCodesModel
 @{
-    ViewData["Title"] = "Generate two-factor authentication (2FA) recovery codes";
+    ViewData["Title"] = "İki faktörlü kimlik doğrulama (2FA) kurtarma kodları oluştur";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -10,18 +10,21 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>Put these codes in a safe place.</strong>
+        <strong>
+            Bu kodları güvenli bir yere koyun.
+        </strong>
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        Cihazınızı kaybederseniz ve kurtarma kodlarınız yoksa, hesabınıza erişimi kaybedersiniz.
     </p>
     <p>
-        Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a asp-page="./ResetAuthenticator">reset your authenticator keys.</a>
+        Yeni kurtarma kodları oluşturmak, kimlik doğrulama uygulamalarında kullanılan anahtarları değiştirmez.
+        Bir doğrulayıcı uygulamasında kullanılan anahtarı değiştirmek isterseniz<a asp-page="./ResetAuthenticator">kimlik doğrulama anahtarlarınızı sıfırlayın.
+</a>
     </p>
 </div>
 <div>
     <form method="post" class="form-group">
-        <button class="btn btn-danger" type="submit">Generate Recovery Codes</button>
+        <button class="btn btn-danger" type="submit">Kurtarma Kodları Oluştur</button>
     </form>
 </div>
