--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -1,54 +1,54 @@
 ﻿@page
 @model TwoFactorAuthenticationModel
 @{
-    ViewData["Title"] = "Two-factor authentication (2FA)";
+    ViewData["Title"] = "İki faktörlü kimlik doğrulama (2FA)";
 }
 
 @Html.Partial("_StatusMessage", Model.StatusMessage)
-<h4>@ViewData["Title"]</h4>
+
 @if (Model.Is2faEnabled)
 {
     if (Model.RecoveryCodesLeft == 0)
     {
         <div class="alert alert-danger">
-            <strong>You have no recovery codes left.</strong>
-            <p>You must <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a> before you can log in with a recovery code.</p>
+            <strong>Kurtarma kodunuz kalmadı.</strong>
+            <p>Mecbursun <a asp-page="./GenerateRecoveryCodes">yeni bir kurtarma kodu seti oluştur</a> Bir kurtarma koduyla giriş yapmadan önce.</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft == 1)
     {
         <div class="alert alert-danger">
-            <strong>You have 1 recovery code left.</strong>
-            <p>You can <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong>1 tane kurtarma kodunuz kaldı.</strong>
+            <p>Yeni bir <a asp-page="./GenerateRecoveryCodes">kurtarma kodu seti oluşturmanız gerekir</a>.</p>
         </div>
     }
     else if (Model.RecoveryCodesLeft <= 3)
     {
         <div class="alert alert-warning">
-            <strong>You have @Model.RecoveryCodesLeft recovery codes left.</strong>
-            <p>You should <a asp-page="./GenerateRecoveryCodes">generate a new set of recovery codes</a>.</p>
+            <strong> @Model.RecoveryCodesLeft Kurtarma kodunuz kaldı.</strong>
+            <p><a asp-page="./GenerateRecoveryCodes">yeni bir kurtarma kodu seti oluşturmalısınız</a>.</p>
         </div>
     }
 
     if (Model.IsMachineRemembered)
     {
         <form method="post" style="display: inline-block">
-            <button type="submit" class="btn btn-default">Forget this browser</button>
+            <button type="submit" class="btn btn-default">Bu tarayıcıyı unut</button>
         </form>
     }
-    <a asp-page="./Disable2fa" class="btn btn-default">Disable 2FA</a>
-    <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
+        <a asp-page="./Disable2fa" class="btn btn-default">2FA'yı devre dışı bırak</a>
+        <a asp-page="./GenerateRecoveryCodes" class="btn btn-default">Kurtarma kodlarını sıfırla</a>
 }
 
-<h5>Authenticator app</h5>
+        <h5>Kimlik doğrulama uygulaması</h5>
 @if (!Model.HasAuthenticator)
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Add authenticator app</a>
+        <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Kimlik doğrulama uygulaması ekle</a>
 }
 else
 {
-    <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Setup authenticator app</a>
-    <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Reset authenticator app</a>
+        <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-default">Kimlik doğrulama uygulaması kur.</a>
+        <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-default">Kimlik doğrulama uygulaması sıfırla.</a>
 }
 
 @section Scripts {
