--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -1,12 +1,11 @@
 ﻿@page
 @model LoginWith2faModel
 @{
-    ViewData["Title"] = "Two-factor authentication";
+    ViewData["Title"] = "İki faktörlü kimlik doğrulama";
 }
 
-<h2>@ViewData["Title"]</h2>
-<hr />
-<p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
+
+<p>Girişiniz bir kimlik doğrulama uygulamasıyla korunmaktadır. Kimlik doğrulama kodunuzu aşağıya girin.</p>
 <div class="row">
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@Model.ReturnUrl">
@@ -26,14 +25,14 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-default">Log in</button>
+                <button type="submit" class="btn btn-default">Giriş Yap</button>
             </div>
         </form>
     </div>
 </div>
 <p>
-    Don't have access to your authenticator device? You can 
-    <a asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">log in with a recovery code</a>.
+    Kimlik doğrulama cihazınıza erişiminiz yok mu? Yapabilirsin
+    <a asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">kurtarma koduyla giriş yapın</a>.
 </p>
 
 @section Scripts {
