--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -6,5 +6,5 @@
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
+    Şifreniz sıfırlandı. Lütfen <a asp-page="./Login">Giriş yapmak için tıklayınız.</a>.
 </p>
