--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,14 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.Role"></label>
+                <select asp-for="Input.Role" class="form-control">
+                    <option value="Candidate">İş arıyorum</option>
+                    <option value="Company">İşverenim</option>
+                </select>
+                <span asp-validation-for="Input.Role" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
