--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -35,7 +35,7 @@
                 </select>
                 <span asp-validation-for="Input.Role" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-default">Register</button>
+            <button type="submit" class="btn btn-default">Kaydol</button>
         </form>
     </div>
 </div>
