--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -54,8 +54,7 @@
                 {
                     <div>
                         <p>
-                            Yapılandırılmış harici kimlik doğrulama hizmetleri yoktur. Görmek <a href="https://go.microsoft.com/fwlink/?LinkID=532715">Bu makale</a>
-                            dış hizmetlerle oturum açmayı desteklemek için bu ASP.NET uygulamasını ayarlama ile ilgili ayrıntılar için.
+                            Yapılandırılmış harici kimlik doğrulama hizmetleri yoktur.
                         </p>
                     </div>
                 }
