validation bugs fixed

--- a/HrPortalV2.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -24,7 +24,7 @@
                     Üyelik sistemimizin çalışması için tarayıcınızda çerez kaydetmekteyiz. Bu konuda ayrıntılı bilgi için gizlilik politikamızı okuyabilirsiniz.
                 </p>
                 <div class="navbar-right">
-                    <a asp-controller="Home" asp-action="Privacy" class="btn btn-info navbar-btn">Ayrıntılı Bilgi</a>
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy" class="btn btn-info navbar-btn">Ayrıntılı Bilgi</a>
                     <button type="button" class="btn btn-default navbar-btn" data-cookie-string="@cookieString">Kabul Et</button>
                 </div>
             </div>
