--- a/HrPortalV2.Web/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Create.cshtml
@@ -25,6 +25,7 @@
                 <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId">
                     <option value="">Firma Seçiniz</option>
                 </select>
+                <span asp-validation-for="CompanyId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PublishDate" class="control-label"></label>
