--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -93,19 +93,21 @@
                     <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId" onchange="CountryChange(this)">
                         <option value="">Ülke seçiniz</option>
                     </select>
-
+                    <span asp-validation-for="CountryId" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="CityId" class="control-label"></label>
                     <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   <option value="">Şehir seçiniz</option></select>
+                    <span asp-validation-for="CityId" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
                     <label asp-for="CountyId" class="control-label"></label>
                     <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
+                    <span asp-validation-for="CountyId" class="text-danger"></span>
                 </div>
                 </div>
 
@@ -127,6 +129,7 @@
                     <select asp-for="OccupationId" class="form-control" asp-items="ViewBag.OccupationId">
                         <option value="">Meslek Seçiniz</option>
                     </select>
+                    <span asp-validation-for="OccupationId" class="text-danger"></span>
                 </div>
             </div>
             <div class="col-md-6">
