--- a/HrPortalV2.Web/Views/Companies/Create.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Create.cshtml
@@ -8,7 +8,7 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Create" enctype="multipart/form-data" onsubmit="var result = true; $.each($('#defaultForm input'), function (index, value) { if ($(value).val() == '') { result=false; } });return result;">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -143,6 +143,9 @@
                 });
             });
         }
-
+    </script>
+    <script src="/js/jquery.inputmask.bundle.js"></script>
+    <script>
+        Inputmask({ "mask": "0599 9999999" }).mask("[type='tel']");
     </script>
 }
