--- a/HrPortalV2.Web/Views/Companies/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Edit.cshtml
@@ -65,7 +65,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Phone" class="control-label"></label>
-                <input asp-for="Phone" class="form-control">
+                <input asp-for="Phone" class="form-control" type="tel" placeholder="05__ _______">
                 <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -117,8 +117,8 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-<script src="https://cdn.ckeditor.com/ckeditor5/10.1.0/classic/ckeditor.js"></script>
-<script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/10.1.0/classic/ckeditor.js"></script>
+    <script>
     ClassicEditor
         .create(document.querySelector('#Description'))
         .catch(error => {
@@ -145,5 +145,5 @@
                 });
             });
         }
-</script>
+    </script>    
 }
