--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -75,7 +75,7 @@
 
                 <div class="form-group">
                     <label asp-for="MobilePhone" class="control-label"></label>
-                    <input asp-for="MobilePhone" class="form-control" />
+                    <input asp-for="MobilePhone" class="form-control" type="tel" placeholder="05__ _______" />
                     <span asp-validation-for="MobilePhone" class="text-danger"></span>
                 </div>
             </div>
