--- a/HrPortalV2.Web/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_Layout.cshtml
@@ -775,7 +775,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <div class="subscribe-form">
                                     <form action="javascript:;">
                                         <div class="input-group">
-                                            <input type="text" placeholder="mail@email.com" class="form-control">
+                                            <input type="email" placeholder="mail@email.com" class="form-control">
                                             <span class="input-group-btn">
                                                 <button class="btn" type="submit">Gönder</button>
                                             </span>
